--- a/INSTALL
+++ b/INSTALL
@@ -18,12 +18,13 @@ The xerox tools are available as binary compilers, for non-commercial
 use. You will need both lexc, xfst, lookup and twolc. All the programs
 must be installed in a folder in your path.
 
-The hfst tools are open source. Follow the instructions in the downloaded folders
+The hfst tools are open source. Follow the instructions in the downloaded
+folders.
 
 At present (2010), the xerox tools are better tested and supported,
 and easier to install (no compilation needed). Hfst is open source and
-without restrictions, and contrary to xerox, has support for
-introduction of weighted transducers.
+without restrictions, and contrary to xerox, has support for weighted
+transducers.
 
 For syntactic analysis you will need the Constraint Grammar compiler
 vislcg3. It can be obtained from http://visl.sdu.dk/vislcg3/.
@@ -34,15 +35,30 @@ corresponding error message which will come during compilation.
 
 Installation:
 =============
-Open a terminal window. Stand in st/fao/src (this folder). 
+The simplest way to compile this package is:
 
-With xerox compilers, write the command:
-make
+  1. `cd' to the directory containing the package's source code and type
+     `./configure' to configure the package for your system.
 
-With htst compilers, write the command:
-make -f Makefile.hfst
+     Running `configure' might take a while.  While running, it prints
+     some messages telling which features it is checking for.
 
-After the compilation process, the analysers can be found in st/fao/bin/
+  2. Type `make' to compile the package.
+
+  3. Optionally, type `make check' to run any self-tests that come with
+     the package.
+
+  4. Type `make install' to install the programs and any data files and
+     documentation.
+
+  5. You can remove the program binaries and object files from the
+     source code directory by typing `make clean'.  To also remove the
+     files that `configure' created (so you can compile the package for
+     a different kind of computer), type `make distclean'.  There is
+     also a `make maintainer-clean' target, but that is intended mainly
+     for the package's developers.  If you use it, you may have to get
+     all sorts of other programs in order to regenerate files that came
+     with the distribution.
 
 
 Compiled files:
