--- a/README
+++ b/README
@@ -55,3 +55,6 @@ WARNING!!! Presently there is a bug in LexC that limits the size of the input ar
 
 For further installation instruction refer to file ``INSTALL``, which contains
 the standard installation instructions for GNU autoconf based software.
+
+.. test
+.. vim: set ft=rst:
