[Template merge - langs/und] Replaced 'giellatekno' with 'giella' or added Divvun, depending on context.

--- a/README
+++ b/README
@@ -11,10 +11,11 @@ in the AUTHORS file are available to grant other licencing choices.
 Installation and compilation, and a short note on usage, is documented in the
 file INSTALL.
 
-Documentation is scattered around on giellateknos pages, e.g.:
+Documentation is scattered around on the Giellatekno and Divvun pages, e.g.:
 
 * http://giellatekno.uit.no/faodoc/index.html
 * http://giellatekno.uit.no/doc/tools/docu-fao-manual.html
+* http://divvun.no/doc/index.html
 
 Requirements
 ------------
@@ -23,8 +24,8 @@ In order to compile and use Faroese language morphology and dictionaries,
 you need:
 
 * Xerox Finite-State Morphology tools, or
-
-* Helsinki Finite-State Technology library and tools, version 3.8 or newer
+* Helsinki Finite-State Technology library and tools, version 3.8 or newer, or
+* Foma finite-state tool
 
 Optionally:
 
@@ -33,7 +34,7 @@ Optionally:
 Downloading
 -----------
 
-The Faroese language sources can be acquired using `giellatekno SVN
+The Faroese language sources can be acquired using `giella SVN
 repository <http://divvun.no/doc/infra/anonymous-svn.html>`_, from the
 language specific directory, after the core has been downloaded and initial
 setup has been performed.
