http://divvun.no/doc -> https://giellalt.uit.no
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@180635 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Documentation is scattered around on the Giellatekno and Divvun pages, e.g.:
 
 * http://giellatekno.uit.no/faodoc/index.html
 * https://giellalt.uit.no/tools/docu-fao-manual.html
-* http://divvun.no/doc/index.html
+* https://giellalt.uit.no/index.html
 
 Requirements
 ------------
@@ -35,7 +35,7 @@ Downloading
 -----------
 
 The Faroese language sources can be acquired using `giella SVN
-repository <http://divvun.no/doc/infra/anonymous-svn.html>`_, from the
+repository <https://giellalt.uit.no/infra/anonymous-svn.html>`_, from the
 language specific directory, after the core has been downloaded and initial
 setup has been performed.
 
