link update to docu.

--- a/README
+++ b/README
@@ -11,11 +11,10 @@ in the AUTHORS file are available to grant other licencing choices.
 Installation and compilation, and a short note on usage, is documented in the
 file INSTALL.
 
-Documentation is scattered around on the Giellatekno and Divvun pages, e.g.:
+Documentation can be found here:
 
-* http://giellatekno.uit.no/faodoc/index.html
-* https://giellalt.uit.no/tools/docu-fao-manual.html
-* https://giellalt.uit.no/index.html
+* https://giellalt.uit.no/lang/doc/index.html (analyser)
+* https://giellalt.uit.no/index.html (infrastructure)
 
 Requirements
 ------------
