--- a/README
+++ b/README
@@ -13,7 +13,7 @@ file INSTALL.
 
 Documentation can be found here:
 
-* https://giellalt.uit.no/lang/doc/index.html (analyser)
+* https://giellalt.uit.no/lang/fao/index.html (analyser)
 * https://giellalt.uit.no/index.html (infrastructure)
 
 Requirements
